samples/_failures_safe/1761129116_3ba43c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79f00ac8.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_79f00ac8.c:128:16: error: missing terminating " character
  128 |         printf("No entries found for
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_79f00ac8.c:128:9: error: expected expression at end of input
  128 |         printf("No entries found for
      |         ^~~~~~
./samples/SAFE/__tmp_79f00ac8.c:128:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_79f00ac8.c:128:9: error: expected declaration or statement at end of input
